fixed html not showing the css font in siteplan

--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -13,7 +13,7 @@ Fonts are separated by a & */
 
   /* change the values below to your chosen font(s) */
   --heading-font: "Joti One";
-  --paragraph-font: Macondo, Helvetica, sans-serif;
+  --paragraph-font: "Macondo", Helvetica, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #A44200;  /* headlines on a white background */ 
